changing required ML classifiers to logistic reg and random forest classifiers

--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
-    "import org.apache.spark.ml.regression.{RandomForestRegressor, LinearRegression}\n",
+    "import org.apache.spark.ml.regression.{RandomForestClassifier, LogisticRegression}\n",
     "import org.apache.spark.ml.{Pipeline, PipelineStage}"
    ]
   },
@@ -75,7 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "// Step 1. Load our Airbnb dataset\n",
+    "// Step 1. Load our Lending Club dataset\n",
     "\n",
     "val inputFile = \"file:////tmp/lending_club.avro\"\n",
     "val outputFileRf = \"/tmp/transformer.rf.ml\"\n",
@@ -84,9 +84,7 @@
     "var dataset = spark.sqlContext.read.format(\"com.databricks.spark.avro\").\n",
     "  load(inputFile)\n",
     "\n",
-    "var datasetFiltered = dataset.filter(\"price >= 50 AND price <= 750 and bathrooms > 0.0\")\n",
-    "println(dataset.count())\n",
-    "println(datasetFiltered.count())"
+    "println(dataset.count())"
    ]
   }
  ],
