updating note on toree dependency

--- a/notebooks/lending-club-classifier-demo.ipynb
+++ b/notebooks/lending-club-classifier-demo.ipynb
@@ -59,7 +59,20 @@
    },
    "outputs": [],
    "source": [
+    "Once [TOREE-345](https://issues.apache.org/jira/browse/TOREE-345)\n",
+    "```\n",
     "%AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0 --transitive\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
