adding note on toree dependency

--- a/notebooks/airbnb-price-regression.ipynb
+++ b/notebooks/airbnb-price-regression.ipynb
@@ -48,7 +48,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/airbnb.avro.zip) from s3. We suggest that you unzip it in your /tmp directory."
+    "For now, we've made it so that you have to download the [data](https://s3-us-west-2.amazonaws.com/mleap-demo/datasources/lending_club.avro) from s3. We suggest that you unzip it in your /tmp directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once [TOREE-345](https://issues.apache.org/jira/browse/TOREE-345) is fixed, we won't have to deal with complicated notebook setup and will just be able to include:\n",
+    "\n",
+    "```scala\n",
+    "%AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0 --transitive\n",
+    "```"
    ]
   },
   {
@@ -59,6 +70,8 @@
    },
    "outputs": [],
    "source": [
+    "// %AddDeps ml.combust.mleap mleap-spark_2.11 0.3.0 --transitive\n",
+    "\n",
     "import org.apache.spark.ml.mleap.feature.OneHotEncoder\n",
     "import org.apache.spark.ml.feature.{StandardScaler, StringIndexer, VectorAssembler}\n",
     "import org.apache.spark.ml.regression.{RandomForestRegressor, LinearRegression}\n",
