Update PySpark Airbnb notebook.

--- a/notebooks/PySpark - AirBnb.ipynb
+++ b/notebooks/PySpark - AirBnb.ipynb
@@ -12,7 +12,7 @@
     "from pyspark.ml.linalg import Vectors\n",
     "from pyspark.ml.feature import VectorAssembler, StandardScaler, StringIndexer\n",
     "from pyspark.ml.mleap.feature import OneHotEncoder\n",
-    "from mleap.spark.spark_support import PythonSerializer\n",
+    "from mleap.spark.spark_support import SimpleSparkSerializer\n",
     "from pyspark.ml import Pipeline, PipelineModel\n",
     "from pyspark.ml.regression import LinearRegression"
    ]
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -39,16 +39,16 @@
     {
      "data": {
       "text/plain": [
-       "PipelineModel_4940b73e72048a730973"
+       "pipeline_b19732905ec3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ps = PythonSerializer()\n",
+    "ps = SimpleSparkSerializer()\n",
     "res = ps.deserializeFromBundle(\"/tmp/pyspark.lr\")\n",
     "res"
    ]
